2023-11-29T10:07:11.963Z |            1.0.0 | First Release
2023-12-01T17:30:12.740Z |            1.0.5 | Readme fixes
2023-12-05T13:49:54.328Z |            1.0.6 | minor updates
2023-12-21T16:27:22.025Z |            1.0.7 | Fix
2024-04-30T14:29:17.350Z |            2.0.0 | Dropped react version and sass
2024-04-30T14:32:07.324Z |            2.0.1 | Fix
2024-04-30T16:23:44.905Z |            2.0.2 | Fix
2024-05-02T07:45:22.906Z |            2.0.3 | React example added
2025-01-16T09:15:26.725Z |            2.0.4 | Fix