@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="icon" href="data:;base64,=">
     <title>Unsplash page - Vanilla JS test</title>
+    <link rel="stylesheet" href="../src/unsplash-page-body-reset.css" type="text/css" media="all">
     <link rel="stylesheet" href="../src/unsplash-page.module.css" type="text/css" media="all">
-    <<meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, nofollow">
   </head>
   <body>
     <div id="root"></div>
