@@ -1,7 +1,7 @@
 {
   "name": "@massimo-cassandro/unsplash-page",
   "description": "A page with a photo from Unsplash to display some message (useful for error pages)",
-  "version": "2.0.4",
+  "version": "2.1.0",
   "license": "MIT",
   "author": "Massimo Cassandro",
   "main": "./src/unsplash-page.js",
