@@ -41,16 +41,6 @@
 
 
 /* stylelint-disable declaration-no-important */
-html, body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-
-}
-
-*, *::before, *::after {
-  box-sizing: border-box !important;
-}
 
 .bodyNoScroll {
   padding: 0 !important;
